--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <td width="200px" height="73px" bgcolor="#f9f9f0">
                             <p style="text-decoration: none; text-transform: uppercase; color: white">
                                 <font size="5" color="#ffffff" face="helvetica">
-                                    <li><a href="Index.html">Home</a></li>
+                                    <li><a href="index.html">Home</a></li>
                                 </font>
                             </p>
                         </td>
