--- a/Contact.html
+++ b/Contact.html
@@ -56,7 +56,7 @@
 
         <td vertical-align="top" align="justify">
             <font face="helvetica">
-                <h1 align="center"><font color="#7bb8b1"><b>Untuk Kontak Layanan kami bisa menghubungu nomor dibawah ini</b></font></h1>
+                <h1 align="center"><font color="#7bb8b1"><b>Untuk Kontak Layanan kami bisa menghubungi nomor dibawah ini</b></font></h1>
                 <p><center>Andrew Septiyan Domara Lumban Batu</center> </p>
                 <p><center>082253390761<center></p>
             </font>
