--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
     <p></p>
     <button><a href="Tugas01.html">Tugas 1</a></button>
     <button><a href="Tugas02.html">Tugas 2</a></button>
+    <button><a href="Tugas03.html">Tugas 3</a></button>
 </body>
 </html>
