--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
     <button><a href="Tugas01.html">Tugas 1</a></button>
     <button><a href="Tugas02.html">Tugas 2</a></button>
     <button><a href="Tugas03.html">Tugas 3</a></button>
+    <button><a href="Tugas04.html">Tugas 4</a></button>
 </body>
 </html>
