--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
     <button><a href="Tugas02.html">Tugas 2</a></button>
     <button><a href="Tugas03.html">Tugas 3</a></button>
     <button><a href="Tugas04.html">Tugas 4</a></button>
+    <button><a href="newbro.html">Test</a></button>
 </body>
 </html>
