--- a/Tugas04.html
+++ b/Tugas04.html
@@ -50,7 +50,7 @@
                         <p class="mt-3 mb-3">Selamat datang di Kasanime, platform streaming anime terbaik untuk para pecinta anime di seluruh dunia! Di sini, Anda akan menemukan ribuan episode anime dari berbagai genre dan tahun rilis. Kami menyediakan pengalaman menonton anime yang nyaman dan berkualitas tinggi. </p>
                     </div>
                     <div class="col align-self-center d-none d-sm-block mt-3">
-                        <img src="image/conscious-design-3D43SBDDkAc-unsplash.jpg" class="img-fluid" alt="Cook" width="700" style="border-radius: 6px;">
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQf8ViDLPeqiWvUq09SUqybWGiMW39SWSDA_A&usqp=CAU" class="img-fluid" alt="test" width="700" style="border-radius: 6px;">
                     </div>
                 </div>
             </div>
