--- a/Tugas03.html
+++ b/Tugas03.html
@@ -1,48 +1,82 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aritmatika Tugas</title>
     <link rel="stylesheet" href="./Aritmatika.css">
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            background-color: #f5f5f5;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+
+        .container {
+            text-align: center;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        label {
+            display: block;
+            margin-bottom: 8px;
+        }
+
+        input {
+            width: 100%;
+            padding: 8px;
+            margin-bottom: 16px;
+            box-sizing: border-box;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+
+        .perhitungan {
+            text-align: center;
+        }
+
+        .button button {
+            width: 50px;
+            border-radius: 10px;
+            border: 1px solid #ADC4CE;
+            box-shadow: none;
+            font-size: 20px;
+            margin: 0 5px;
+            cursor: pointer;
+        }
+
+        button[type="button"]:hover {
+            background-color: #ADC4CE;
+            color: #fff;
+        }
+    </style>
 </head>
-<style>
-    fieldset{
-        width:400px ;
-        height:100%;
-        border:1px solid #ADC4CE;
-        background-color: #F1F0E8;
-        box-shadow: 3px 3px 5px #333;
-    }
-    button[type="button"]{
-        width: 50px;
-        border-radius: 10px;
-        border-color: #ADC4CE;
-        box-shadow:none;
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: 20px!important;
-    }
-</style>
 <body>
-    <center>
-        <fieldset>
-            <h1>Aritmatika</h1>
-            <div class="container">
-            <form name="aritmatika" id="aritmatika">
-            <label for="number_1">Bilangan Pertama</label> <Br>
+    <div class="container">
+        <h1>Aritmatika</h1>
+        <form name="aritmatika" id="aritmatika">
+            <label for="number_1">Bilangan Pertama</label> <br>
             <input type="number" id="number_1" name="number_1"  placeholder="Masukkan Bilangan Angka"><p></p>
-            <label for="number_2">Bilangan Kedua</label> <Br>
+            <label for="number_2">Bilangan Kedua</label> <br>
             <input type="number" id="number_2" name="number_2"  placeholder="Masukkan Bilangan Angka"><p></p>
         </form>
-    </div>
-    <div class="perhitungan">
-        <div class="button">
-            <button type="button" onclick="operation('+')">+</button>
-            <button type="button" onclick="operation('-')">-</button>
-            <button type="button" onclick="operation('*')">x</button>
-            <button type="button" onclick="operation('/')">÷</button>
+        <div class="perhitungan">
+            <div class="button">
+                <button type="button" onclick="operation('+')">+</button>
+                <button type="button" onclick="operation('-')">-</button>
+                <button type="button" onclick="operation('*')">&times;</button>
+                <button type="button" onclick="operation('/')">&divide;</button>
+            </div>
         </div>
     </div>
-</fieldset></center>
     <script>
         function operation(hitung){
             var a = parseFloat(document.getElementById('number_1').value)
